txs auto checkin

--- a/Chapter6_Iteration.tex
+++ b/Chapter6_Iteration.tex
@@ -610,7 +610,7 @@ The output of this program is
 %
 which is a (slightly sloppy) multiplication table.  If the
 sloppiness bothers you, try replacing the spaces between
-columns with tab characters (\tt \\t) and see what you get.
+columns with tab characters (\tt \t) and see what you get.
 
 \section{Functions}
 \index{function}
