txs auto checkin

--- a/exercises/Exercise_6_english.tex
+++ b/exercises/Exercise_6_english.tex
@@ -57,3 +57,12 @@ calculation.
 
 
 
+\begin{exercise}
+	In Exercise~\ref{ex.power} we wrote a recursive version of {\tt
+		power()}, which takes a double {\tt x} and an integer {\tt n} and
+	returns $x^n$.  Now write an iterative function to perform the same
+	calculation.
+\end{exercise}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
