--- a/Chapter7_Array.tex
+++ b/Chapter7_Array.tex
@@ -326,94 +326,10 @@ is {\tt length - 1}, which is the index of the last element.  When
 is not executed, which is a good thing, since it would access a
 memory location that is not part of the array.
 
-\section{Random numbers}
-\label{Random numbers}
-\label{random}
-\label{pseudorandom}
-\index{random number}
-\index{deterministic}
-\index{nondeterministic}
-
-Most computer programs do the same thing every time they are executed,
-so they are said to be {\bf deterministic}.  Usually, determinism is a
-good thing, since we expect the same calculation to yield the same
-result.  For some applications, though, we would like the
-computer to be unpredictable.  Games are an obvious example.
-
-Making a program truly {\bf nondeterministic} turns out to be not
-so easy, but there are ways to make it at least seem
-nondeterministic.  One of them is to generate {pseudorandom} numbers and
-use them to determine the outcome of the program.
-Pseudorandom numbers
-are not truly random in the mathematical sense, but 
-for our purposes, they will do.
-
-\index{header file!stdlib.h}
-\index{<stdlib.h>}
-
-C provides a function called {\tt rand()} that generates
-pseudorandom numbers.  It is declared in the
-header file {\tt stdlib.h}, which contains a variety of ``standard
-library'' functions, hence the name.
-
-The return value from {\tt rand()} is an integer between 0 and {\tt
-RAND\_MAX}, where {\tt RAND\_MAX} is a large number (about 2 billion
-on my computer) also defined in the header file.  Each time you call
-{\tt rand()} you get a different randomly-generated number.  To see a
-sample, run this loop:
-
-\begin{verbatim}
-    for (i = 0; i < 4; i++) 
-    {
-        int x = rand();
-        printf("%i\n", x);
-    }
-\end{verbatim}
-%
-On my machine I got the following output:
-
-\begin{verbatim}
-1804289383
-846930886
-1681692777
-1714636915
-\end{verbatim}
-%
-You will probably get something similar, but different, on yours.
-
-Of course, we don't always want to work with gigantic integers.
-More often we want to generate integers between 0 and some
-upper bound.  A simple way to do that is with the modulus
-operator.  For example:
-
-\begin{verbatim}
-    int x = rand ();
-    int y = x % upperBound;
-\end{verbatim}
-%
-Since {\tt y} is the remainder when {\tt x} is divided by
-{\tt upperBound}, the only possible values for {\tt y}
-are between 0 and {\tt upperBound - 1}, including both
-end points.  Keep in mind, though, that {\tt y} will never
-be equal to {\tt upperBound}.
-
-It is also frequently useful to generate random floating-point values.
-A common way to do that is by dividing by {\tt RAND\_MAX}.  For
-example:
-
-\begin{verbatim}
-    int x = rand ();
-    double y = (double) x / RAND_MAX;
-\end{verbatim}
-%
-This code sets {\tt y} to a random value between 0.0 and 1.0,
-including both end points.  As an exercise, you might want to
-think about how to generate a random floating-point value in
-a given range; for example, between 100.0 and 200.0.
 
 %%
 \pagebreak
-\section{Statistics}
+\section{Arrays and random}
 \index{statistics}
 \index{distribution}
 \index{mean}
