txs auto checkin

--- a/exercises/Exercise_7_english.tex
+++ b/exercises/Exercise_7_english.tex
@@ -56,6 +56,8 @@ Write a function and prototype that takes an array of integers, the length of th
 The function should search through the provided array and should return the first index where
 {\tt target} appears in the array, if it does. If {\tt target} is not in the array the function should 
 return an invalid index value to indicate an error condition  (e.g.  -1).
+
+Write a main program to test the function. Be sure to print the array as well.
 \end{exercise}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -65,6 +67,8 @@ return an invalid index value to indicate an error condition  (e.g.  -1).
 	Write a function and prototype that takes an array of integers, and the length of the array.
 	
 	The function should sum all the values in the array and then return the sum of the array. If the array is empty, return 0.
+	
+	Write a main program that creates a 20 element array, and uses a user-terminated loop to ask the user to fill the array with positive numbers. The user can stop the loop by entering a negative number. Use the array, call your function and print the resulting sum. Be sure to print the array as well/
 \end{exercise}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
