txs auto checkin

--- a/exercises/Exercise_7_english.tex
+++ b/exercises/Exercise_7_english.tex
@@ -93,6 +93,8 @@ at the given indices.
 integers and that uses {\tt IndexOfMaxInRange()} and {\tt SwapElement()}
 to sort the array from largest to smallest.
 
+\item Write a main program to test all of these functions. 
+
 \end{enumerate}
 \end{exercise}
 
