txs auto checkin

--- a/Chapter7_Array.tex
+++ b/Chapter7_Array.tex
@@ -439,7 +439,7 @@ is true if the function returns a value.
 Changes to the internal variable in the called function do not affect the external 
 values of the calling function.
 
-When we pass an array to a function this behaviour changes to
+When we pass an array to a function this behavior changes to
 something called {\bf call-by-reference} evaluation.
 C does not copy the array to an internal array --  it rather generates a
 reference to the original array and any operation in the called function 
