--- a/Main.tex
+++ b/Main.tex
@@ -225,7 +225,7 @@ The \LaTeX\ source and code for this book is available from: \\
 \include{Chapter5}
 \include{Chapter6_Iteration}
 \include{Chapter7_Array}
-%\include{Chapter8_String}
+\include{Chapter8_String}
 %\include{Chapter9_Struct}
 
 
