--- a/Main.tex
+++ b/Main.tex
@@ -226,7 +226,8 @@ The \LaTeX\ source and code for this book is available from: \\
 \include{Chapter6_Iteration}
 \include{Chapter7_Array}
 \include{Chapter8_String}
-%\include{Chapter9_Struct}
+\include{Chapter9_Struct}
+\include{Chapter10_Files}
 
 
 \appendix
