txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -35,7 +35,7 @@
 	
 	\subsection{Reading from Text Files}
 	
-	Suppose we have a text file called "library_books.txt" containing a list of books 
+	Suppose we have a text file called \emph{library_books.txt} containing a list of books 
 	and their authors, separated by a comma. We want to read the data from this file 
 	and display it on the screen. The following example demonstrates how to read data 
 	from a text file using fgets():
