txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -4,8 +4,11 @@
 % Copyright (C) 2023 Michael K Penta
 
 \chapter{Working with files}
-\label{structs}
-\index{struct}
+\label{files}
+\index{files}
+
+
+
 
 \section{Compound values}
 
