txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -33,7 +33,7 @@
 	
 	\section{Reading and Writing to Files}
 	
-	\subsection{Reading from Text Files}
+	\section{Reading from Text Files}
 	
 	Suppose we have a text file called "library_books.txt" containing a list of books 
 	and their authors, separated by a comma. We want to read the data from this file 
