txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -32,9 +32,7 @@ check if the file was opened successfully. If the file pointer is NULL, it indic
 an error. After performing the necessary operations, we close the file using the 
 fclose() function.
 
-\section{Reading and Writing to Files}
-
-\subsection{Reading from Text Files}
+\section{Reading from Text Files}
 
 Suppose we have a text file called "library_books.txt" containing a list of books 
 and their authors, separated by a comma. We want to read the data from this file 
