--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -30,14 +30,14 @@ we open the file using the fopen() function, as shown in the following example:
 In this example, we open a text file called "books.txt" in read mode ("r"). We then 
 check if the file was opened successfully. If the file pointer is NULL, it indicates 
 an error. After performing the necessary operations, we close the file using the 
-fclose() function.
+{\tt fclose()} function.
 
 \section{Reading from Text Files}
 
-Suppose we have a text file called "library_books.txt" containing a list of books 
+Suppose we have a text file called {\tt library_books.txt}containing a list of books 
 and their authors, separated by a comma. We want to read the data from this file 
 and display it on the screen. The following example demonstrates how to read data 
-from a text file using fgets():
+from a text file using {\tt fgets()}:
 
 
 \section{Compound values}
