txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -27,7 +27,7 @@ we open the file using the fopen() function, as shown in the following example:
 
 
 
-In this example, we open a text file called "books.txt" in read mode ("r"). We then 
+In this example, we open a text file called {\tt books.txt} in read mode ({\tt r}). We then 
 check if the file was opened successfully. If the file pointer is NULL, it indicates 
 an error. After performing the necessary operations, we close the file using the 
 {\tt fclose()} function.
