txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -32,7 +32,7 @@ check if the file was opened successfully. If the file pointer is NULL, it indic
 an error. After performing the necessary operations, we close the file using the 
 {\tt fclose()} function.
 
-\section{Reading from Text Files}
+\section{Reading from text files}
 
 Suppose we have a text file called {\tt library_books.txt}containing a list of books 
 and their authors, separated by a comma. We want to read the data from this file 
