txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -34,7 +34,8 @@ an error. After performing the necessary operations, we close the file using the
 
 \section{Reading from text files}
 
-Suppose we have a text file called {\tt library_books.txt}containing a list of books 
+Suppose we have a text file called {\tt library_books.txt} 
+containing a list of books 
 and their authors, separated by a comma. We want to read the data from this file 
 and display it on the screen. The following example demonstrates how to read data 
 from a text file using {\tt fgets()}:
