txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -70,7 +70,7 @@ Now, let's assume we want to create a new text file called "borrowed$_$books.txt
 
 \section{Reading from Binary Files}
 
-Suppose we have a binary file called "library$_$inventory.dat" that stores information about the books in a library. The data is stored as a series of binary records representing the book's title, author, and publication year. We want to read the data from this file and display it on the screen. The following example demonstrates how to read data from a binary file using {\tt fread()}:
+Suppose we have a binary file called "library$\_$inventory.dat" that stores information about the books in a library. The data is stored as a series of binary records representing the book's title, author, and publication year. We want to read the data from this file and display it on the screen. The following example demonstrates how to read data from a binary file using {\tt fread()}:
 
 \begin{verbatim}
 	typedef struct {
